petclinic: fixed warnings